Bug #212821 r=mkaply, sr=roc, a=mkaply Allows show all pages in print preview